mdsa-sorting-2 bug + flicker fix

--- a/src/mdsa-sorting-2/style.css
+++ b/src/mdsa-sorting-2/style.css
@@ -1,89 +1,1 @@
-.cro #recipes .article {
-  opacity: 1;
-}
-
-.cro .recipes.grid_fluid .recipe-header {
-  padding-top: 20px;
-  padding-bottom: 20px;
-}
-
-.cro .filter-dropdown-selected {
-  display: none;
-}
-
-.cro filter-dropdown {
-  border:0;
-  width: 180px;
-  z-index: 1;
-}
-
-.cro .filter-dropdown-wrapper {
-  height: 0;
-  overflow: visible;
-  display: flex;
-}
-
-.cro .filter-dropdown .filter-dropdown-wrapper filter-option {
-  color:#a02971 !important;
-  margin: -7px 0 0;
-  font-size: 1.2rem;
-  padding: 12px 0;
-  height: 36px;
-  width: 90px;
-  text-align: center;
-  border:1px solid #dadbde;
-  border-top-right-radius: 4px;
-  border-bottom-right-radius: 4px;
-  border-left:0;
-}
-
-.cro .filter-dropdown .filter-dropdown-wrapper filter-option:first-child {
-  margin-right: -1px;
-  border-radius: 0;
-  border-top-left-radius: 4px;
-  border-bottom-left-radius: 4px;
-  border-left:1px solid #dadbde;
-  border-right:0;
-}
-
-.cro filter-option.selected,
-.cro filter-dropdown[selected] .filter-dropdown-wrapper filter-option:first-child,
-.cro filter-dropdown[selected] .filter-dropdown-wrapper filter-option[value="Saves"],
-.cro .filter-dropdown[selected] .filter-dropdown-selected, .cro .filter-dropdown[selected] filter-option[selected],
-.cro filter-dropdown .filter-dropdown-wrapper filter-option:first-child {
-  color: #fff !important;
-  background: #ff0000;
-  border-color: #ff0000;
-  position: relative;
-}
-
-.cro filter-dropdown[selected] .filter-dropdown-wrapper filter-option:first-child::before,
-.cro filter-dropdown[selected] .filter-dropdown-wrapper filter-option[value="Saves"]::before,
-.cro .filter-dropdown[selected] .filter-dropdown-selected::before,
-.cro .filter-dropdown[selected] filter-option[selected]::before,
-.cro filter-dropdown .filter-dropdown-wrapper filter-option:first-child::before {
-  content: '✓';
-  width:10px;
-  height:10px;
-  display: inline-block;
-  margin-right: 2px;
-}
-
-.cro filter-dropdown[selected] .filter-dropdown-wrapper filter-option:first-child {
-  color:#a02971 !important;
-  background: #ffffff;
-  border-color: #dadbde;
-}
-
-.cro filter-dropdown[selected] .filter-dropdown-wrapper filter-option:first-child::before {
-  display: none;
-}
-
-@media only screen and (max-width: 699px) {
-  .cro .filter-dropdown {
-    margin-right: -10px;
-  }
-  .cro .filter-dropdown .filter-dropdown-wrapper filter-option {
-    margin: -4px 0 0;
-  }
-}
+.cro .filter-dropdown-selected-content {visibility: visible;}
